--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 <label for="loanFv">Valor Futuro (Residual R$):</label>
                 <input type="number" id="loanFv" value="100000">
             </div>
-            <button onclick="generatePriceTable()">Gerar Tabela PRICE</button>
-            <button onclick="generateSacTable()">Gerar Tabela SAC</button>
+            <button onclick="generatePriceTable()">Tabela PRICE</button>
+            <button onclick="generateSacTable()">Tabela SAC</button>
             <div class="table-container" id="amortizationTable"></div>
         </div>
     </div>
