--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
                 <label for="loanFv">Valor Futuro (Residual R$):</label>
                 <input type="number" id="loanFv" value="100000">
             </div>
-            <button onclick="generatePriceTable()">Tabela PRICE</button>
-            <button onclick="generateSacTable()">Tabela SAC</button>
-            <div class="table-container" id="amortizationTable"></div>
+			<div class="amortization-buttons">
+				<button onclick="generatePriceTable()">Tabela PRICE</button>
+				<button onclick="generateSacTable()">Tabela SAC</button>
+			</div>
+			<div class="table-container" id="amortizationTable"></div>
         </div>
     </div>
 
