--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- Seção do Simulador de Investimentos -->
         <div class="simulator-section">
-            <h2>Simulador de Investimentos: Rumo aos R$ 1 Milhão</h2>
+            <h2>Simulador de Investimentos: Rumo ao R$ 1 Milhão</h2>
             <div class="form-group">
                 <label for="initialInvestment">Investimento Inicial (R$):</label>
                 <input type="number" id="initialInvestment" value="100000">
@@ -111,4 +111,5 @@
 </body>
 
 </html>
+
 
