--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
         <!-- Seção do Simulador de Investimentos -->
         <div class="simulator-section">
-            <h2>Simulador de Investimentos: Rumo ao R$ 1 Milhão</h2>
+            <h2>Simulador de Investimentos: Rumo ao R$ 100 mil</h2>
             <div class="form-group">
                 <label for="initialInvestment">Investimento Inicial (R$):</label>
-                <input type="number" id="initialInvestment" value="100000">
+                <input type="number" id="initialInvestment" value="1000">
             </div>
             <div class="form-group">
                 <label for="monthlyContribution">Aporte Mensal (R$):</label>
-                <input type="number" id="monthlyContribution" value="1000">
+                <input type="number" id="monthlyContribution" value="500">
             </div>
             <div class="form-group">
                 <label for="annualReturn">Rentabilidade Anual (%):</label>
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label for="goal">Objetivo Financeiro (R$):</label>
-                <input type="number" id="goal" value="1000000">
+                <input type="number" id="goal" value="100000">
             </div>
             <button onclick="calculateInvestment()">Simular</button>
             <div class="results" id="investmentResult"></div>
@@ -41,6 +41,32 @@
             </div>
         </div>
 
+        <!-- Seção das Tabelas de Amortização -->
+        <div class="simulator-section">
+            <h2>Análise de Financiamentos: Tabela PRICE vs. Tabela SAC</h2>
+            <div class="form-group">
+                <label for="loanAmount">Valor Financiado (R$):</label>
+                <input type="number" id="loanAmount" value="10000">
+            </div>
+            <div class="form-group">
+                <label for="monthlyInterestRate">Taxa de Juros Mensal (%):</label>
+                <input type="number" id="monthlyInterestRate" value="1.25">
+            </div>
+            <div class="form-group">
+                <label for="loanTerm">Prazo (meses):</label>
+                <input type="number" id="loanTerm" value="60">
+            </div>
+            <div class="form-group">
+                <label for="loanFv">Valor Futuro (Residual R$):</label>
+                <input type="number" id="loanFv" value="0">
+            </div>
+			<div class="amortization-buttons">
+				<button onclick="generatePriceTable()">Tabela PRICE</button>
+				<button onclick="generateSacTable()">Tabela SAC</button>
+			</div>
+			<div class="table-container" id="amortizationTable"></div>
+        </div>
+	
         <!-- Seção da Calculadora Financeira HP 12C -->
         <div class="simulator-section">
             <h2>Calculadora Financeira Avançada (Estilo HP 12C)</h2>
@@ -56,7 +82,7 @@
             </div>
             <div class="form-group">
                 <label for="hp_n">n (meses):</label>
-                <input type="number" id="hp_n" value="312">
+                <input type="number" id="hp_n" value="360">
             </div>
             <div class="form-group">
                 <label for="hp_i">i (taxa % a.m.):</label>
@@ -72,45 +98,19 @@
             </div>
             <div class="form-group">
                 <label for="hp_fv">FV (Valor Futuro R$):</label>
-                <input type="number" id="hp_fv" value="100000">
+                <input type="number" id="hp_fv" value="50000">
             </div>
             <button onclick="calculateHP()">Calcular</button>
             <div class="results" id="hpResult"></div>
         </div>
-
-        <!-- Seção das Tabelas de Amortização -->
-        <div class="simulator-section">
-            <h2>Análise de Financiamentos: Tabela PRICE vs. Tabela SAC</h2>
-            <div class="form-group">
-                <label for="loanAmount">Valor Financiado (R$):</label>
-                <input type="number" id="loanAmount" value="1000000">
-            </div>
-            <div class="form-group">
-                <label for="monthlyInterestRate">Taxa de Juros Mensal (%):</label>
-                <input type="number" id="monthlyInterestRate" value="0.85">
-            </div>
-            <div class="form-group">
-                <label for="loanTerm">Prazo (meses):</label>
-                <input type="number" id="loanTerm" value="312">
-            </div>
-            <div class="form-group">
-                <label for="loanFv">Valor Futuro (Residual R$):</label>
-                <input type="number" id="loanFv" value="100000">
-            </div>
-			<div class="amortization-buttons">
-				<button onclick="generatePriceTable()">Tabela PRICE</button>
-				<button onclick="generateSacTable()">Tabela SAC</button>
-			</div>
-			<div class="table-container" id="amortizationTable"></div>
-        </div>
     </div>
-
-    <!-- Link para o arquivo de script externo, colocado no final do body para melhor performance -->
+	<!-- Link para o arquivo de script externo, colocado no final do body para melhor performance -->
     <script src="simuladorfinanceiro.js"></script>
 
 </body>
 
 </html>
+
 
 
 
